--- a/app/src/main/res/layout/activity_media_event.xml
+++ b/app/src/main/res/layout/activity_media_event.xml
@@ -115,9 +115,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding ="2dp"
-            android:clipToPadding = "false"/>
+            android:layout_height="match_parent" />
     </com.qtalk.recyclerviewfastscroller.RecyclerViewFastScroller>
 
     <com.veinhorn.scrollgalleryview.ScrollGalleryView
