--- a/app/src/main/res/layout/dialog_detail_video.xml
+++ b/app/src/main/res/layout/dialog_detail_video.xml
@@ -190,6 +190,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:clickable="false"
+                style="@style/TextButtonStyle.Normal"
                 tools:text="1" />
 
             <ImageView
