--- a/app/src/main/res/layout/list_item_media_event_compact.xml
+++ b/app/src/main/res/layout/list_item_media_event_compact.xml
@@ -2,85 +2,96 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="2dp">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical"
+        android:background="@color/colorText"
+        android:padding="1dp">
 
-<!--        <com.finn.androidUtilities.SquareLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:layout_weight="1"-->
-<!--            app:equalMode="matchWidth">-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <!--        <com.finn.androidUtilities.SquareLayout-->
+            <!--            android:layout_width="match_parent"-->
+            <!--            android:layout_height="match_parent"-->
+            <!--            android:layout_weight="1"-->
+            <!--            app:equalMode="matchWidth">-->
 
             <ImageView
                 android:id="@+id/listItem_mediaEventCompact_image1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="1dp"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
                 tools:srcCompat="@drawable/simpsons_movie_poster" />
-<!--        </com.finn.androidUtilities.SquareLayout>-->
+            <!--        </com.finn.androidUtilities.SquareLayout>-->
 
-<!--        <com.finn.androidUtilities.SquareLayout-->
-<!--            android:id="@+id/listItem_mediaEventCompact_2"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:layout_weight="1"-->
-<!--            app:equalMode="matchWidth">-->
+            <!--        <com.finn.androidUtilities.SquareLayout-->
+            <!--            android:id="@+id/listItem_mediaEventCompact_2"-->
+            <!--            android:layout_width="match_parent"-->
+            <!--            android:layout_height="match_parent"-->
+            <!--            android:layout_weight="1"-->
+            <!--            app:equalMode="matchWidth">-->
 
             <ImageView
                 android:id="@+id/listItem_mediaEventCompact_image2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="1dp"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
                 tools:srcCompat="@drawable/simpsons_movie_poster" />
-<!--        </com.finn.androidUtilities.SquareLayout>-->
+            <!--        </com.finn.androidUtilities.SquareLayout>-->
 
-    </LinearLayout>
+        </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
-<!--        <com.finn.androidUtilities.SquareLayout-->
-<!--            android:id="@+id/listItem_mediaEventCompact_3"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:layout_weight="1"-->
-<!--            app:equalMode="matchWidth">-->
+            <!--        <com.finn.androidUtilities.SquareLayout-->
+            <!--            android:id="@+id/listItem_mediaEventCompact_3"-->
+            <!--            android:layout_width="match_parent"-->
+            <!--            android:layout_height="match_parent"-->
+            <!--            android:layout_weight="1"-->
+            <!--            app:equalMode="matchWidth">-->
 
             <ImageView
                 android:id="@+id/listItem_mediaEventCompact_image3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="1dp"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
                 tools:srcCompat="@drawable/simpsons_movie_poster" />
-<!--        </com.finn.androidUtilities.SquareLayout>-->
+            <!--        </com.finn.androidUtilities.SquareLayout>-->
 
-<!--        <com.finn.androidUtilities.SquareLayout-->
-<!--            android:id="@+id/listItem_mediaEventCompact_4"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:layout_weight="1"-->
-<!--            app:equalMode="matchWidth">-->
+            <!--        <com.finn.androidUtilities.SquareLayout-->
+            <!--            android:id="@+id/listItem_mediaEventCompact_4"-->
+            <!--            android:layout_width="match_parent"-->
+            <!--            android:layout_height="match_parent"-->
+            <!--            android:layout_weight="1"-->
+            <!--            app:equalMode="matchWidth">-->
 
-        <ImageView
-            android:id="@+id/listItem_mediaEventCompact_image4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:adjustViewBounds="true"
-            tools:srcCompat="@drawable/simpsons_movie_poster"
-            tools:visibility="gone" />
-<!--        </com.finn.androidUtilities.SquareLayout>-->
+            <ImageView
+                android:id="@+id/listItem_mediaEventCompact_image4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="1dp"
+                android:layout_weight="1"
+                android:adjustViewBounds="true"
+                tools:srcCompat="@drawable/simpsons_movie_poster" />
+            <!--        </com.finn.androidUtilities.SquareLayout>-->
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
