--- a/app/src/main/res/menu/task_bar_media_event.xml
+++ b/app/src/main/res/menu/task_bar_media_event.xml
@@ -1,10 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <item
+        android:id="@+id/taskBar_mediaEvent_edit"
+        android:icon="@drawable/ic_edit"
+        android:iconTint="#FFFFFF"
+        android:title="Hinzufügen"
+        android:visible="false"
+        tools:visible="true"
+        app:showAsAction="always" />
 
     <item
         android:id="@+id/taskBar_mediaEvent_add"
         android:icon="@drawable/ic_add"
         android:title="Hinzufügen"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/taskBar_mediaEvent_sortTree"
+        android:icon="@drawable/ic_sort_tree"
+        android:title="Events neu Sortieren"
+        app:showAsAction="always" />
+
 </menu>
