--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -94,23 +94,28 @@
         </com.google.android.material.appbar.AppBarLayout>
 
 
-        <com.qtalk.recyclerviewfastscroller.RecyclerViewFastScroller
-            android:id="@+id/fastScroller"
+<!--        <com.qtalk.recyclerviewfastscroller.RecyclerViewFastScroller-->
+<!--            android:id="@+id/fastScroller"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            app:handleDrawable="@drawable/fast_scroll_thumb"-->
+<!--            app:handleHeight="40dp"-->
+<!--            app:handleWidth="30dp"-->
+<!--            app:trackMarginStart="5dp"-->
+<!--            app:trackMarginEnd="20dp"-->
+<!--            app:handleVisibilityDuration="1500"-->
+<!--            app:layout_behavior="@string/appbar_scrolling_view_behavior">-->
+
+<!--            <androidx.recyclerview.widget.RecyclerView-->
+<!--                android:id="@+id/recycler"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent" />-->
+<!--        </com.qtalk.recyclerviewfastscroller.RecyclerViewFastScroller>-->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:handleDrawable="@drawable/fast_scroll_thumb"
-            app:handleHeight="40dp"
-            app:handleWidth="30dp"
-            app:trackMarginStart="5dp"
-            app:trackMarginEnd="20dp"
-            app:handleVisibilityDuration="1500"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycler"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-        </com.qtalk.recyclerviewfastscroller.RecyclerViewFastScroller>
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 
         <TextView
