--- a/app/src/main/res/layout/activity_media.xml
+++ b/app/src/main/res/layout/activity_media.xml
@@ -124,7 +124,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
-        android:padding="2dp"
+        android:paddingHorizontal="2dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
     <!--    <androidx.recyclerview.widget.RecyclerView-->
     <!--        android:id="@+id/recycler"-->
