--- a/app/src/main/res/layout/scroll_gallery_view.xml
+++ b/app/src/main/res/layout/scroll_gallery_view.xml
@@ -3,12 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scrollGalleryView_root"
+    android:fitsSystemWindows="false"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
     <com.veinhorn.scrollgalleryview.HackyViewPager
         android:id="@+id/viewPager"
+        android:fitsSystemWindows="false"
+
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
@@ -21,12 +25,13 @@
         android:layout_marginBottom="15dp"
         android:textColor="@android:color/white" />
 
+<!--    android:layout_marginTop="45dp"-->
     <FrameLayout
         android:id="@+id/scrollGalleryView_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/round_background"
         android:backgroundTint="#8B3C3C3C"
@@ -45,7 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="65dp"
         android:background="@drawable/round_background"
         android:backgroundTint="#8B3C3C3C"
@@ -65,7 +70,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="117dp"
         android:background="@drawable/round_background"
         android:backgroundTint="#8B3C3C3C"
@@ -108,4 +113,17 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"></LinearLayout>
     </HorizontalScrollView>
+
+    <View
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="0dp"
+        android:background="@drawable/ic_rounded_corner" />
+
+    <View
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:scaleX="-1"
+        android:background="@drawable/ic_rounded_corner" />
 </RelativeLayout>
