MainActivity auch für horizontal optimiert
FastScroll und ExpandedToolbar bug geboben

--- a/app/src/main/res/layout/main_fragment_videos.xml
+++ b/app/src/main/res/layout/main_fragment_videos.xml
@@ -14,10 +14,10 @@
         android:layout_margin="8dp"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="vertical">-->
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -398,7 +398,6 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/main_collection_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -409,7 +408,6 @@
                     android:layout_height="match_parent"
                     android:layout_margin="8dp"
                     android:layout_weight="1"
-                    android:background="@drawable/tile_background"
                     android:clickable="true"
                     android:elevation="3dp"
                     android:foreground="@drawable/ripple"
@@ -418,6 +416,8 @@
                     android:orientation="vertical">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/main_collection_layout"
+                        android:background="@drawable/tile_background"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
 
@@ -475,58 +475,10 @@
                     android:gravity="center"
                     android:onClick="showLaterMenu"
                     android:orientation="vertical"
-                    android:visibility="invisible">
+                    android:visibility="invisible"/>
 
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-
-                        <ImageView
-                            android:layout_width="0dp"
-                            android:layout_height="0dp"
-                            android:alpha="0.075"
-                            android:src="@drawable/ic_mode"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="8dp"
-                            android:layout_marginTop="8dp"
-                            android:layout_marginEnd="8dp"
-                            android:layout_marginBottom="8dp"
-                            android:gravity="center"
-                            android:orientation="vertical"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent">
-
-                            <TextView
-                                android:id="@+id/main_watchLaterCount_label"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginBottom="8dp"
-                                android:text="Modus"
-                                android:textAlignment="center"
-                                android:textSize="24sp"
-                                android:textStyle="bold" />
-
-                            <TextView
-                                android:id="@+id/main_watchLaterCount"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="–"
-                                android:visibility="gone" />
-                        </LinearLayout>
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-
-                </com.maxMustermannGeheim.linkcollection.Utilities.SquareLayout>
             </LinearLayout>
-        </LinearLayout>
+<!--        </LinearLayout>-->
 
     </LinearLayout>
 </ScrollView>
