--- a/app/src/main/res/layout/main_fragment_owe.xml
+++ b/app/src/main/res/layout/main_fragment_owe.xml
@@ -14,51 +14,51 @@
         android:layout_margin="8dp"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:visibility="gone"
-            tools:visibility="visible">
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="vertical"-->
+<!--            android:visibility="gone"-->
+<!--            tools:visibility="visible">-->
 
-            <TextView
-                android:id="@+id/main_owe_summaryOwn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                tools:text="Du schuldest anderen 7.58 €" />
+<!--            <TextView-->
+<!--                android:id="@+id/main_owe_summaryOwn"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_weight="1"-->
+<!--                tools:text="Du schuldest anderen 7.58 €" />-->
 
-            <TextView
-                android:id="@+id/main_owe_summaryOthers"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                tools:text="Dir wird 17.36 € geschuldet" />
+<!--            <TextView-->
+<!--                android:id="@+id/main_owe_summaryOthers"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_weight="1"-->
+<!--                tools:text="Dir wird 17.36 € geschuldet" />-->
 
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+<!--            <FrameLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content">-->
 
-                <!--                <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar-->
-                <!--                    android:id="@+id/main_owe_progressBarOwn"-->
-                <!--                    android:layout_width="match_parent"-->
-                <!--                    android:layout_height="20dp"-->
-                <!--                    android:layout_margin="3dp"-->
-                <!--                    app:rcBackgroundColor="#E2E2E2"-->
-                <!--                    app:rcProgressColor="#4CAF50"-->
-                <!--                    app:rcRadius="10dp"-->
-                <!--                    app:rcReverse="false"/>-->
-                <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
-                    android:id="@+id/main_owe_progressBarOthers"
-                    android:layout_width="match_parent"
-                    android:layout_height="20dp"
-                    android:layout_margin="3dp"
-                    app:rcBackgroundColor="#4CAF50"
-                    app:rcProgressColor="#F44336"
-                    app:rcRadius="10dp"
-                    app:rcReverse="true" />
-            </FrameLayout>
-        </LinearLayout>
+<!--                &lt;!&ndash;                <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar&ndash;&gt;-->
+<!--                &lt;!&ndash;                    android:id="@+id/main_owe_progressBarOwn"&ndash;&gt;-->
+<!--                &lt;!&ndash;                    android:layout_width="match_parent"&ndash;&gt;-->
+<!--                &lt;!&ndash;                    android:layout_height="20dp"&ndash;&gt;-->
+<!--                &lt;!&ndash;                    android:layout_margin="3dp"&ndash;&gt;-->
+<!--                &lt;!&ndash;                    app:rcBackgroundColor="#E2E2E2"&ndash;&gt;-->
+<!--                &lt;!&ndash;                    app:rcProgressColor="#4CAF50"&ndash;&gt;-->
+<!--                &lt;!&ndash;                    app:rcRadius="10dp"&ndash;&gt;-->
+<!--                &lt;!&ndash;                    app:rcReverse="false"/>&ndash;&gt;-->
+<!--                <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar-->
+<!--                    android:id="@+id/main_owe_progressBarOthers"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="20dp"-->
+<!--                    android:layout_margin="3dp"-->
+<!--                    app:rcBackgroundColor="#4CAF50"-->
+<!--                    app:rcProgressColor="#F44336"-->
+<!--                    app:rcRadius="10dp"-->
+<!--                    app:rcReverse="true" />-->
+<!--            </FrameLayout>-->
+<!--        </LinearLayout>-->
 
         <LinearLayout
             android:layout_width="match_parent"
