--- a/app/src/main/res/layout/list_item_media_event.xml
+++ b/app/src/main/res/layout/list_item_media_event.xml
@@ -46,7 +46,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listItem_mediaEvent_content"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="103dp"
         android:paddingHorizontal="6dp"
         android:layout_marginTop="3dp"
         android:clipToPadding = "false"/>
